--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: db/test.sqlite3
 
@@ -25,3 +25,6 @@ production:
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   encoding: unicode
   database: cashflow_production
+
+cucumber:
+  <<: *test
