--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -2,14 +2,15 @@
 #
 # Table name: items
 #
-#  id          :integer          not null, primary key
-#  trx_type    :string
-#  trx_date    :date
-#  amount      :float
-#  name        :string
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
-#  kashflow_id :integer
+#  id                :integer          not null, primary key
+#  trx_type          :string
+#  trx_date          :date
+#  amount            :float
+#  name              :string
+#  created_at        :datetime         not null
+#  updated_at        :datetime         not null
+#  kashflow_id       :integer
+#  recurrent_item_id :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
